# DocketPredictMLL

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  railway.json  run_calibration.py  run_statsbomb_ingest.py
OPS/: API-Football-Ultra.postman_collection.json  ARRANQUE.md  Stack-Actual.postman_collection.json
apps/: __init__.py
scripts/: apply-wc-migration.bat  apply_sql_migration.py  audit_data.py  audit_ev.py  audit_favorite_bias.py  check_odds_api.py  fit_bucket_calibration.py  fit_dixon_coles_rho.py  fit_joint_calibration.py  fit_model_weights.py  fit_shape_calibration.py  load_understat_csvs.py  load_wc_historical.py  restart-telegram.bat  run-backtest.bat  run_backtest.py  run_calibrate.py  run_learning_cycle.py  run_update_elo.py  start-api-tunnel.bat  start-api.bat  start-api.sh  start-redis.bat  start-telegram.bat  start-worker.bat  start-worker.sh  stop-redis.bat  telegram-poll.bat  telegram_poll.py  test_api_keys.py  verify-supabase.bat  verify_supabase.py
supabase/: config.toml
tests/: test_backtest.py  test_bet_decision_tree.py  test_bet_pipeline.py  test_bet_profile.py  test_bucket_calibration.py  test_calibration.py  test_calibration_metrics.py  test_confidence_score.py  test_dc_markets.py  test_deploy_calibration_gate.py  test_ev_anomaly.py  test_ev_policy.py  test_ev_regime_clamp.py  test_favorite_bias_audit.py  test_ingest_sources.py  test_injury_news.py  test_joint_calibration.py  test_live_calibration.py  test_live_roi.py  test_llm.py  test_market_alignment.py  test_market_alignment_integration.py  test_ml.py  (+26 more)
(+137 files in other folders)
